# hiastro-teleco

./: .env  .gitignore  README.md  SETUP.md  requirements.txt  start_server.py  test_gemini.py
agent/: Dockerfile  agent.py  pyproject.toml
asr/: Dockerfile  audio_convert.py  faster_whisper_server.py  pyproject.toml
infra/: .gitignore  cursor.json  docker-compose.yml  env.sample  prometheus.yml
infra/.github/workflows/: ci.yml
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
router/: Dockerfile  README.md  TROUBLESHOOTING.md  check_status.py  debug_audio.py  monitor_logs.py  pipeline.py  pyproject.toml  run_debug.py  start_server.py  summary.md  test_audio_flow.py
router/protos/: whisper.proto
router/tests/: test_latency.py  test_vad.py
