[tool.poetry]
name = "voice-asr"
version = "0.1.0"
description = "ASR server using faster-whisper for streaming transcription"
authors = ["Cursor Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper-server = "*"
torch = {version = "^2.2.0", extras = ["cuda"]}
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 