[tool.poetry]
name = "voice-router"
version = "0.1.0"
description = "Pipecat-based voice router for real-time conversational agent"
authors = ["Cursor Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
redis = "^5.0.0"
prometheus-client = "^0.19.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pipecat-ai = {git = "https://github.com/pipecat-ai/pipecat.git"}
websockets = "^15.0.1"
silero-vad = "^5.1.2"
grpcio = "^1.73.1"
scipy = "^1.16.0"
websocket-client = "^1.8.0"

[tool.poetry.dev-dependencies]
ruff = "^0.4.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 